# School_stuff

./: CMakeLists.txt  readme.md
Classes/: Date1.h  Point2d.h  date1.cpp  fraction.cpp  point2d.cpp
Classes/Class inheritance/: Circle.cpp  Circle.h  Cylinder.cpp  Cylinder.h  ErasmusStudent.cpp  ErasmusStudent.h  Operation.cpp  Operation.h  Person.cpp  Person.h  Power.cpp  Power.h  Product.h  Rectangle.cpp  Rectangle.h  ResaleProduct.cpp  ResaleProduct.h  Shape.cpp  Shape.h  Solid.cpp  Solid.h  Student.cpp  Student.h  Sum.cpp  Sum.h  readme.md
Classes/Separate compilation & class templates/: Color.cpp  Color.h  Date.cpp  Date.h  Person.cpp  Person.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  p2_main.cpp  pair.cpp  stack.cpp
Classes/dates/: Date2.h  Date3.h  date2.cpp  date3.cpp
STL & Operator overloading/: MovingAverage.cpp  MovingAverage.h  Point.cpp  Point.h  count-words.cpp  iterators.cpp  map-romans.cpp
Streams/: count-words.cpp  maximum.cpp  median-values.cpp  normalise.cpp  readme.md  wc.cpp  wc.h  word_count.cpp
Test_Stuff/: Airport.cpp  Submarine.h  alist.h  append.cpp  duplicate.cpp  longest-common-prefix.cpp  longest.cpp  longest.h  median.cpp  median.h  normalise-vector.cpp  pangram.cpp  pangram.h  print_grades.cpp  string-split.cpp
Using STL/: books.cpp  count-words.cpp  dates.cpp  highest.cpp  replace.cpp
